[FIX] Overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,6 @@
 }
 
 /* Body layouts */
-.container-full {
-    max-width: 1300px;
-    margin: 0 auto;
-}
-
 header {
     height: 60px;
 }
@@ -32,13 +27,15 @@ main {
 .sidebar {
     height: 100vh;
     width: 80px;
-    padding: 100px 20px 20px 20px;
+    padding: 80px 20px 20px 20px;
+    overflow-y: auto;
 }
 
 .main-screen {
     width: 100vw;
     height: 100vh;
     padding: 60px 0;
+    overflow-y: auto;
 }
 
 /* Utilities */
